@@ -13,6 +13,11 @@ changes' is much more useful than 'misc edits' or 'code cleanup'.
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
+
+Remove unused #ifdef and useless LOG.
+ common/map.c
+Nicolas Weeger 2008-05-06
+
 Provide a more explicit message when attempting to write down a spell with
 no marked scroll, as per bug #1910805.
  server/skills.c
